# SmartStream

./: .gitignore  README.md  Tutorial.md
backend/: docker-compose.yml
backend/analytics-service/: main.py  pyproject.toml
backend/api-gateway/: Dockerfile  main.py  pyproject.toml
backend/content-service/: main.py  pyproject.toml
backend/iot-service/: Dockerfile  main.py  pyproject.toml
backend/news-service/: main.py  pyproject.toml
backend/notification-fn/: main.py  pyproject.toml
backend/shared/: auth.py
backend/user-service/: main.py  pyproject.toml
frontend/: docker-compose.yml
frontend/mf-content/: package.json  webpack.config.js
frontend/mf-content/src/: ContentApp.tsx  bootstrap.tsx
frontend/mf-iot/: package.json  webpack.config.js
frontend/mf-iot/src/: IoTApp.tsx  bootstrap.tsx
frontend/mf-user/: package.json  tsconfig.json  webpack.config.js
frontend/mf-user/src/: UserApp.tsx  bootstrap.tsx  styles.css
frontend/shell/: package.json  webpack.config.js
frontend/shell/public/: index.html
frontend/shell/src/: App.tsx  bootstrap.tsx  declarations.d.ts
