[project]
name = "content-service"
version = "0.1.0"
description = "FastAPI microservice"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "redis>=7.1.0",
    "aio-pika>=9.5.8",
]
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
