[project]
name = "iot-service"
version = "0.1.0"
description = "FastAPI microservice"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "nats-py>=2.10.2",
    "gmqtt>=0.7.0",
    "paho-mqtt<=2.0",
]
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
